--- a/resources.qrc
+++ b/resources.qrc
@@ -1,8 +1,6 @@
 <RCC>
     <qresource prefix="/resources" >
         <file alias="icon">resources/icon.png</file>
-	<file alias="step1">resources/step1.jpg</file>
-	<file alias="step2">resources/step2.jpg</file>
-	<file alias="step3">resources/step3.png</file>
+	<file alias="algo">resources/algo.png</file>
     </qresource>
 </RCC>
