--- a/ui/blur.ui
+++ b/ui/blur.ui
@@ -280,5 +280,22 @@
  <resources>
   <include location="../../../../../plugins/Blurring/resources.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>checkBox_envelope</sender>
+   <signal>toggled(bool)</signal>
+   <receiver>comboBox_envelope</receiver>
+   <slot>setEnabled(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>133</x>
+     <y>280</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>365</x>
+     <y>280</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
