--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -14,6 +14,15 @@
    <string>Blurring</string>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
     <widget class="QListWidget" name="listWidget">
      <property name="sizePolicy">
