--- a/ui/blur.ui
+++ b/ui/blur.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>499</width>
-    <height>434</height>
+    <height>517</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,14 @@
      <item row="1" column="1">
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QComboBox" name="comboBox_layerToBlur"/>
+        <widget class="QComboBox" name="comboBox_layerToBlur">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushButton_refreshLayersToBlur">
